--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             gap: 15px;
         }
     </style>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/7565ec70c398009ffed2461a1/7994144ca7c1f238cb9b783b2.js");</script>
 </head>
 <body>
     <div class="container">
@@ -127,8 +128,34 @@
 
         <div class="email-form">
             <input type="email" id="email" placeholder="Enter your email" required>
-            <button type="submit">Notify me</button>
+            <button type="submit" onclick="submitEmail()">Notify me</button>
         </div>
+        
+        <script>
+            async function submitEmail() {
+                const email = document.getElementById('email').value;
+        
+                if (email) {
+                    try {
+                        const response = await fetch('https://d8c3230r8l.execute-api.eu-north-1.amazonaws.com/prod/EmailSubmissionHandler', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({ email: email })
+                        });
+                        const result = await response.json();
+                        alert(result.message);
+                    } catch (error) {
+                        console.error('Error submitting email:', error);
+                        alert('Failed to submit email');
+                    }
+                } else {
+                    alert('Please enter an email');
+                }
+            }
+        </script>        
+
 
         <div class="footer">
             <p>&copy; 2024 Quiztube by xval.ai</p>
