--- a/index.html
+++ b/index.html
@@ -126,36 +126,10 @@
             <img src="https://storage.googleapis.com/web-dev-uploads/image/WlD8wC6g8khYWPJUsQceQkhXSlv1/iNEddTyWiMfLSwFD6qGq.png" alt="Available in the Chrome Web Store" width="248" height="75">
         </div>
 
-        <div class="email-form">
-            <input type="email" id="email" placeholder="Enter your email" required>
-            <button type="submit" onclick="submitEmail()">Notify me</button>
-        </div>
-        
-        <script>
-            async function submitEmail() {
-                const email = document.getElementById('email').value;
-        
-                if (email) {
-                    try {
-                        const response = await fetch('https://d8c3230r8l.execute-api.eu-north-1.amazonaws.com/prod/EmailSubmissionHandler', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({ email: email })
-                        });
-                        const result = await response.json();
-                        alert(result.message);
-                    } catch (error) {
-                        console.error('Error submitting email:', error);
-                        alert('Failed to submit email');
-                    }
-                } else {
-                    alert('Please enter an email');
-                }
-            }
-        </script>        
-
+        <form action="https://formspree.io/f/mjkbqqrp" method="POST" class="email-form">
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <button type="submit">Notify me</button>
+        </form>     
 
         <div class="footer">
             <p>&copy; 2024 Quiztube by xval.ai</p>
