--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p><strong>Automatic quizzes from YouTube learning videos.</strong><br>Generate quizzes from your YouTube piano lessons, DIY tutorials, and more.</p>
 
         <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VPJYBnmxNMI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JTdKJEOsQtY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
 
         <div class="install-button">
