Fix typo, update tagline

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizetube Landing Page</title>
+    <title>Quiztube | xval.ai</title>
     <style>
         :root {
             --klein-blue: #002FA7;
@@ -116,7 +116,7 @@
             <span class="coming-soon-badge">Coming soon</span>
         </div>
         
-        <p><strong>Automatic quizzes from YouTube learning videos.</strong><br>Generate quizzes from your YouTube piano lessons, DIY tutorials, and more.</p>
+        <p><strong>Automatic quizzes from YouTube learning videos.</strong><br>Generate quizzes from your YouTube coding tutorials, language lessons, and more.</p>
 
         <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/JTdKJEOsQtY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
